src/objects/pse__Timecard_Approval_UI__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>ORG wide setting for Timecard Approval UI.</description>
    <fields>
        <fullName>pse__Always_Group_Timecard_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, timecard approval requests are grouped into default primary or secondary categories. This setting populates automatically based on the user’s selections on the Manage Timecards to Approve page.</description>
        <inlineHelpText>If selected, timecard approval requests are grouped into default primary or secondary categories. This setting populates automatically based on the user’s selections on the Manage Timecards to Approve page.</inlineHelpText>
        <label>Always Group Timecard Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Number_Of_Timecards_Shown_Per_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of timecards to display per page on the Manage Timecards to Approve page.</description>
        <inlineHelpText>Number of timecards to display per page on the Manage Timecards to Approve page.</inlineHelpText>
        <label>Number Of Timecards Shown Per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Selected_Primary_Group__c</fullName>
        <description>If Always Group Timecard Approvals is selected, this setting applies a default primary grouping to timecard approval requests. This setting populates automatically based on the user’s selections on the Manage Timecards to Approve page.</description>
        <inlineHelpText>If Always Group Timecard Approvals is selected, this setting applies a default primary grouping to timecard approval requests. This setting populates automatically based on the user’s selections on the Manage Timecards to Approve page.</inlineHelpText>
        <label>Selected Primary Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Selected_Secondary_Group__c</fullName>
        <description>If Always Group Timecard Approvals is selected, this setting applies a default secondary grouping to timecard approval requests. This setting populates automatically based on the user’s selections on the Manage Timecards to Approve page.</description>
        <inlineHelpText>If Always Group Timecard Approvals is selected, this setting applies a default secondary grouping to timecard approval requests. This setting populates automatically based on the user’s selections on the Manage Timecards to Approve page.</inlineHelpText>
        <label>Selected Secondary Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Assignment Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Billable_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Billable Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Etc_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Etc Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Milestone_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Milestone Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Project_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Project Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Resource_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Resource Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Timecard_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting is no more in use and may be removed in a future release.</description>
        <inlineHelpText>This custom setting is no more in use and may be removed in a future release.</inlineHelpText>
        <label>Show Timecard Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Total_Hours_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Total Hours Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Week_Ending_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;Timecard Approval Columns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Show Week Ending Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_daily_hours__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting is no more in use and may be removed in a future release.</description>
        <inlineHelpText>This custom setting is no more in use and may be removed in a future release.</inlineHelpText>
        <label>Show daily hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Tooltip_Fields__c</fullName>
        <description>Comma delimited list of API names of timecard fields to be shown when hovering over the tooltip icon.</description>
        <inlineHelpText>Comma delimited list of API names of timecard fields to be shown when hovering over the tooltip icon.</inlineHelpText>
        <label>Tooltip Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timecard Approval UI</label>
</CustomObject>